hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "hello-service"
  namespace: "hello-namespace"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: "hellowebapp"
